--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             </a>
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-          What can I do with my resources ? When new physical capacbilities are built, new protocols are de facto available for implementations. To discover protocols and functionalities availables for a given set of resources, follow this link to activate the &ldquo;Resources Visulaisation&rdquo;. Click on the nodes to select which nodes are available to you. Protocols will be highlighted when they can be implemented using the selected resources.
+          What can I do with my resources ? When new physical capacbilities are built, new protocols are de facto available for implementations. To discover protocols and functionalities availables for a given set of resources, follow this link to activate the &ldquo;Resources Visualization&rdquo;. Click on the nodes to select which nodes are available to you. Protocols will be highlighted when they can be implemented using the selected resources.
 Which resources do I need ?
         </div>
           <a href="/posts/visualizations/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
