--- a/404.html
+++ b/404.html
@@ -48,7 +48,7 @@
     
 
   <header>
-    <div class="bg-black">
+    <div class="bg-navy">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l justify-between items-center center">
     <a href="https://quantumprotocolzoo.github.io/" class="f3 fw2 hover-white no-underline white-90 dib">
@@ -87,7 +87,7 @@
     </article>
 
     </main>
-    <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
+    <footer class="bg-navy bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
   <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="https://quantumprotocolzoo.github.io/" >
     &copy; 2019 Quantum Protocol Zoo&#39;s Repository
