--- a/resources.html
+++ b/resources.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <p>
-    Click on a node to add it as your list of availables resources / protocols / routines and see what you can implement.
+    Click on a node to add it as your list of availables resources / protocols / routines and see what you can implement. Double-click to visit a node's wiki page (if there is one). Two finger scroll to zoom in / out.
   </p>
   <div id="mynetwork"></div>
   <pre id='eventSpan'></pre>
